a few extra test checks

--- a/CStatic.Tests/testdata/VarCommand_tests/child2.html
+++ b/CStatic.Tests/testdata/VarCommand_tests/child2.html
@@ -1,5 +1,7 @@
 ﻿<!-- {{placein=master.html}} -->
 
-<!-- {{var= title : saying hello }} -->
+<!-- {{var= title : saying hello, 
+        meta-desc: this is the meta description
+     }} -->
 
 <p>hello world!</p>
