refactored and added further var support

--- a/CStatic.Tests/testdata/VarCommand_tests/master.html
+++ b/CStatic.Tests/testdata/VarCommand_tests/master.html
@@ -3,11 +3,11 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <meta name="description" content="<!-- {{getvar=meta-desc}}-->" />
-    <title><!--{{getvar=title}}--></title>
+    <meta name="description" content="<!-- {{getvar meta-desc}}-->" />
+    <title><!--{{getvar title}}--></title>
 </head>
 <body>
-    <!-- {{placeholder=main}} -->
-    <p>hello <!--{{getvar=name}}--></p>
+    <!-- {{placeholder main}} -->
+    <p>hello <!--{{getvar name}}--></p>
 </body>
 </html>
